[workspace]

members = [
    "rubicon",
    "numeraire",
    "testing",
]

[workspace.dependencies]
ethers = { version="0.15.0", features=["abigen", "ws", "rustls"] }
tracing = "0.1.37"
serde_json = "1.0.86"
anyhow = "1.0.65"
serde = { version="1.0.145", features=["derive"] }
derive-new = { version="0.5.9" }
rayon = { version="1.5.3" }
rust_decimal = { version="1.26.1" }
base64 = { version="0.13.0" }
hex = { version="0.4.3" }
postage = { version="0.5.0" }
flume = { version="0.10.14" }
futures = { version="0.3.25" }
#[features]
#erc20 = []