[workspace]

members = [
    "rubicon",
    "numeraire",
]

[workspace.dependencies]
ethers = { version="1.5.0", features=["abigen"] }
tracing = "0.1.37"
serde_json = "1.0.93"
anyhow = "1.0.69"
serde = { version="1.0.152", features=["derive"] }
derive-new = { version="0.5.9" }
rayon = { version="1.6.1" }
rust_decimal = { version="1.28.1" }
base64 = { version="0.21.0" }
hex = { version="0.4.3" }
postage = { version="0.5.0" }
flume = { version="0.10.14" }
futures = { version="0.3.26" }
