[package]
name = "numeraire"
version = "1.3.1"
edition = "2021"
license-file = "../LICENSE.txt"
description = "Market abstractions for the Rubicon SDK"
readme = "../README.md"
repository = "https://github.com/RubiconDeFi/rubi-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace=true, features=["derive"] }
anyhow = { workspace=true }
rust_decimal = { workspace=true }
ethers = { workspace=true }
base64 = { workspace=true }
hex = { workspace=true }
