[package]
name = "rubicon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
numeraire = { path = "../numeraire" } 
# external
ethers = { workspace=true }
tracing = { workspace=true }
serde_json = { workspace=true }
anyhow = { workspace=true }
hex = { workspace=true }
postage = { workspace=true }
futures = "*"

[features]
default = []
streaming = []