[package]
name = "rbcn-rs"
version = "1.3.0-alpha"
edition = "2021"
license-file = "LICENSE.txt"
description = "An SDK for rubicon.finance"
readme = "../README.md"
repository = "https://github.com/RubiconDeFi/rbcn-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
numeraire = { path = "../numeraire" } 
# external
ethers = { workspace=true }
tracing = { workspace=true }
serde_json = { workspace=true }
anyhow = { workspace=true }
hex = { workspace=true }
futures = { workspace=true }
# optional - they are only used in streaming
postage = { workspace=true, optional=true }
flume = { workspace=true, optional=true }

[features]
default = []
full = ["streaming", "ierc20"]
streaming = ["postage", "flume"]
ierc20 = []