[package]
name = "rubi"
version = "1.3.0"
edition = "2021"
license-file = "../LICENSE.txt"
description = "An SDK for rubicon.finance"
readme = "../README.md"
repository = "https://github.com/RubiconDeFi/rubi-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
numeraire = { version="1.3.0" } 
# external
ethers = { workspace=true }
tracing = { workspace=true }
serde = { workspace=true }
serde_json = { workspace=true }
anyhow = { workspace=true }
hex = { workspace=true }
futures = { workspace=true }
rust_decimal = { workspace=true }

[features]
default = []
full = ["ierc20"]
aid = []
ierc20 = []