[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "buy_all_amount"
path = "src/market/buyAllAmount.rs"

[[bin]]
name = "sell_all_amount"
path = "src/market/sellAllAmount.rs"


[dependencies]
numeraire = { path="../numeraire" }
rubicon = { path="../rubicon" }

tokio = { version="1.21.2", features = ["full"] }
ethers = { workspace=true }
dotenv = "0.15.0"
hex = { workspace=true }